--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "nodemon app.js"
-    
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
+  }
 }
